Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57862

Windows 10/Vista style: QLineEdit ignores QPalette::Base color role if it is added as a widget to QGraphicsView

    XMLWordPrintable

Details

    • 88788667a083efc6c04d1df641077f5a06be57b5 (qtbase/5.9, 17.2.17)

    Description

      On Windows 10 if a widget has palette set with QPalette::Base color changed, that color is ignored if the Widget is added to a graphics view's scene by addWidget().

      On Windows 7 this works as expected. Also if we don't use the QGraphicsView, the palette color works as it should.

      Steps to reproduce:

      • Run attached sample
      • Observe the QTextEdit background color
      • EXPECTED: Background color is green
      • ACTUAL: Background color is white - any color is ignored

      Attachments

        1. qtbug57862.zip
          0.8 kB
          Jussi Witick
        2. qtbug57862_diag.diff
          12 kB
          Friedemann Kleint
        3. qtbug57862.zip
          2 kB
          Friedemann Kleint
        4. qtbug57862_log.txt
          4 kB
          Friedemann Kleint

        Issue Links

          For Gerrit Dashboard: QTBUG-57862
          # Subject Branch Project Status CR V

          Activity

            People

              kleint Friedemann Kleint
              jussi_witick Jussi Witick
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes