QWindowsVistaStyle: Set theme flag noContent for PE_FrameLineEdit

When the flag is not set, custom background colors for QLineEdit
will not work. Set the flag as does QWindowsXpStyle.

Task-number: QTBUG-57862
Change-Id: I6e653c2cdc8cc523673e1629bf42f833c8504431
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>